# see https://packaging.python.org/tutorials/packaging-projects/#creating-pyproject-toml
[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "lonk"
version = "0.0.1"
description = "A simple link shortener."
license = "MIT"
authors = [
    "AG DSN <services@agdsn.de>",
]
maintainers = [
    "AG DSN <services@agdsn.de>",
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# might move to `[project.dependencies]` once
# https://github.com/python-poetry/poetry/issues/3332 is resolved
[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
pylint = "^2.7.2"
SQLAlchemy = "^1.3.23"
Flask-SQLAlchemy = "^2.4.4"
uWSGI = "^2.0.19"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
pylint = "^2.7.2"
mypy = "^0.812"
ipython = "^7.21.0"
pytest-flask = "^1.2.0"

[tool.black]
line-length = 88
include = '''
(
    ^/tests/.*[.]py$
  | ^/src/sphobjinv/.*[.]py$
  | ^/setup[.]py
  | ^/conftest[.]py
)
'''
exclude = '''
(
    __pycache__
  | ^/[.]
  | ^/doc
  | ^/env
)
'''
